--- a/Forms/VK.FMX.OAuth2.fmx
+++ b/Forms/VK.FMX.OAuth2.fmx
@@ -16,7 +16,9 @@ object FormFMXOAuth2: TFormFMXOAuth2
     Size.Width = 800.000000000000000000
     Size.Height = 600.000000000000000000
     Size.PlatformDefault = False
+    OnDidStartLoad = BrowserDidStartLoad
     OnDidFinishLoad = BrowserDidFinishLoad
+    OnDidFailLoadWithError = BrowserDidFailLoadWithError
   end
   object LayoutLoad: TLayout
     Align = Contents
