--- a/Samples/ChatFMX/ChatFMX.Frame.Chat.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Chat.fmx
@@ -112,7 +112,7 @@ object FrameChat: TFrameChat
             TextSettings.Font.Family = 'Roboto'
             TextSettings.Font.Size = 14.000000000000000000
             TextSettings.Font.StyleExt = {00070000000000000004000000}
-            TextSettings.FontColor = xFFE6E3E1
+            TextSettings.FontColor = xFFE1E3E6
             TextSettings.WordWrap = False
             Text = 'DevGeeks'
             TabOrder = 0
@@ -362,7 +362,7 @@ object FrameChat: TFrameChat
       Align = Bottom
       Corners = [BottomRight]
       Fill.Color = xFF292929
-      Position.Y = 608.000000000000000000
+      Position.Y = 526.000000000000000000
       Sides = [Top, Bottom, Right]
       Size.Width = 686.000000000000000000
       Size.Height = 167.000000000000000000
@@ -518,19 +518,19 @@ object FrameChat: TFrameChat
       Fill.Color = xFF222222
       Margins.Right = 1.000000000000000000
       Size.Width = 685.000000000000000000
-      Size.Height = 560.000000000000000000
+      Size.Height = 430.000000000000000000
       Size.PlatformDefault = False
       Stroke.Kind = None
       object VertScrollBoxMessages: TVertScrollBox
         Align = Client
         Size.Width = 685.000000000000000000
-        Size.Height = 560.000000000000000000
+        Size.Height = 430.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
         OnResize = VertScrollBoxMessagesResize
         OnViewportPositionChange = VertScrollBoxMessagesViewportPositionChange
-        Viewport.Width = 685.000000000000000000
-        Viewport.Height = 560.000000000000000000
+        Viewport.Width = 669.000000000000000000
+        Viewport.Height = 430.000000000000000000
         object LayoutMessageList: TLayout
           Position.X = 3.000000000000000000
           Position.Y = 11.000000000000000000
@@ -1111,6 +1111,144 @@ object FrameChat: TFrameChat
               end
             end
           end
+        end
+      end
+    end
+    object RectangleAddToFriends: TRectangle
+      Align = Top
+      Corners = []
+      Fill.Color = xFF222222
+      Position.Y = 48.000000000000000000
+      Sides = [Bottom]
+      Size.Width = 686.000000000000000000
+      Size.Height = 48.000000000000000000
+      Size.PlatformDefault = False
+      Stroke.Color = xFF424242
+      XRadius = 12.000000000000000000
+      YRadius = 12.000000000000000000
+      object LayoutAddToFriends: TLayout
+        Align = Client
+        Padding.Left = 20.000000000000000000
+        Padding.Right = 15.000000000000000000
+        Size.Width = 686.000000000000000000
+        Size.Height = 48.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 0
+        object LabelAddFriendHint: TLabel
+          Align = Client
+          StyledSettings = [Style]
+          Size.Width = 466.000000000000000000
+          Size.Height = 48.000000000000000000
+          Size.PlatformDefault = False
+          TextSettings.Font.Family = 'Roboto'
+          TextSettings.Font.Size = 13.000000000000000000
+          TextSettings.FontColor = xFFE1E3E6
+          Text = #1044#1086#1073#1072#1074#1100#1090#1077' '#1044#1084#1080#1090#1088#1080#1103' '#1074' '#1076#1088#1091#1079#1100#1103' '#1080' '#1086#1073#1097#1072#1081#1090#1077#1089#1100' '#1095#1072#1097#1077
+          TabOrder = 2
+        end
+        object Button1: TButton
+          Tag = 15
+          Align = MostRight
+          StyledSettings = [Family, FontColor]
+          Margins.Left = 10.000000000000000000
+          Margins.Top = 10.000000000000000000
+          Margins.Bottom = 10.000000000000000000
+          Position.X = 496.000000000000000000
+          Position.Y = 10.000000000000000000
+          Size.Width = 143.000000000000000000
+          Size.Height = 28.000000000000000000
+          Size.PlatformDefault = False
+          StyleLookup = 'button_simple'
+          TabOrder = 7
+          Text = #1044#1086#1073#1072#1074#1080#1090#1100' '#1074' '#1076#1088#1091#1079#1100#1103
+          TextSettings.Font.Family = 'Roboto'
+          TextSettings.Font.Size = 12.500000000000000000
+          TextSettings.FontColor = xFF222222
+        end
+        object Layout16: TLayout
+          Align = MostRight
+          Margins.Left = 8.000000000000000000
+          Margins.Right = 8.000000000000000000
+          Position.X = 647.000000000000000000
+          Size.Width = 16.000000000000000000
+          Size.Height = 48.000000000000000000
+          Size.PlatformDefault = False
+          TabOrder = 8
+          object PathCloseAddToFriends: TPath
+            Align = Center
+            Cursor = crHandPoint
+            Data.Path = {
+              2700000000000000CDCCCC400000A0400100000033331B419A99D93F02000000
+              999921416766A63F02000000999921413433333F0200000033331B419C99993E
+              02000000CDCC1441C0CCCCBD0200000033330B41C4CCCCBD02000000CDCC0441
+              9C99993E010000000000A04066666640010000009A99D93F9899993E02000000
+              6766A63FD4CCCCBD020000003433333FD4CCCCBD020000009C99993E9899993E
+              02000000C0CCCCBD3233333F02000000C4CCCCBD6666A63F020000009C99993E
+              9999D93F01000000666666400000A040010000009899993ECDCC044102000000
+              D4CCCCBD33330B4102000000D4CCCCBDCDCC1441020000009899993E33331B41
+              02000000FEFFFF3E66661E41020000003233333F0000204102000000FFFF7F3F
+              00002041020000006666A63F00002041020000000000C03F66661E4102000000
+              9999D93F33331B41010000000000A040CCCCCC4001000000CDCC044133331B41
+              020000000000084166661E410200000033330B41000020410200000000001041
+              0000204102000000CDCC144100002041020000000000184166661E4102000000
+              33331B4133331B410200000099992141CDCC1441020000009999214133330B41
+              0200000033331B41CDCC044103000000CDCCCC400000A040}
+            Fill.Color = xFF828282
+            Hint = #1057#1082#1088#1099#1090#1100
+            Size.Width = 10.000000000000000000
+            Size.Height = 10.000000000000000000
+            Size.PlatformDefault = False
+            Stroke.Kind = None
+            WrapMode = Fit
+            ParentShowHint = False
+            ShowHint = True
+          end
+        end
+      end
+    end
+    object RectangleFooterBlock: TRectangle
+      Align = Bottom
+      Corners = [BottomRight]
+      Fill.Color = xFF292929
+      Padding.Left = 10.000000000000000000
+      Position.Y = 693.000000000000000000
+      Sides = [Top, Bottom, Right]
+      Size.Width = 686.000000000000000000
+      Size.Height = 82.000000000000000000
+      Size.PlatformDefault = False
+      Stroke.Color = xFF424242
+      XRadius = 12.000000000000000000
+      YRadius = 12.000000000000000000
+      object LayoutBlockInfo: TLayout
+        Align = Client
+        Margins.Left = 30.000000000000000000
+        Margins.Top = 23.000000000000000000
+        Margins.Bottom = 23.000000000000000000
+        Size.Width = 646.000000000000000000
+        Size.Height = 36.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 6
+        object ImageWarning: TImage
+          MultiResBitmap = <
+            item
+            end>
+          Align = Left
+          Margins.Right = 20.000000000000000000
+          Size.Width = 36.000000000000000000
+          Size.Height = 36.000000000000000000
+          Size.PlatformDefault = False
+        end
+        object LabelWarningText: TLabel
+          Align = Client
+          StyledSettings = [Style]
+          Size.Width = 590.000000000000000000
+          Size.Height = 36.000000000000000000
+          Size.PlatformDefault = False
+          TextSettings.Font.Family = 'Roboto'
+          TextSettings.Font.Size = 13.000000000000000000
+          TextSettings.FontColor = xFFE1E3E6
+          Text = #1055#1086#1083#1100#1079#1086#1074#1072#1090#1077#1083#1100' '#1091#1076#1072#1083#1105#1085'.'
+          TabOrder = 2
         end
       end
     end
